--- a/src/_start/components/core/HeadCalculator.css
+++ b/src/_start/components/core/HeadCalculator.css
@@ -4,9 +4,8 @@
 
 #closer-tool-bar:hover::after {
     content: "\00d7";
-    font-size: 1.75em;
+    font-size: 1em;
 }
-
 
 #hidden-tool-bar {
     background-color: green;
@@ -14,12 +13,12 @@
 
 #hidden-tool-bar:hover::after {
     content: "-";
-    font-size: 1.75em;
+    font-size: 1em;
 }
 
 #zoom-tool-bar:hover::after {
     content: "+";
-    font-size: 1.75em;
+    font-size: 1em;
 }
 
 #zoom-tool-bar {
@@ -27,11 +26,21 @@
 }
 
 .btn-tool-bar {
-    width: 25px;
-    height: 25px;
+    width: 18px;
+    height: 18px;
     border-radius: 25px;
 }
 
 .ion-size-sm {
     max-width: 276px;
+}
+
+#drag-head {
+    position: absolute;
+    width: 100%;
+}
+
+#drag-container {
+    width: 100%;
+    height: 50px;
 }
